--- a/631.md
+++ b/631.md
@@ -1,32 +1,49 @@
 ---
-title: "Selected papers for STATS 631"
+title: "STATS 631"
 author: "Instructor: Edward L. Ionides"
 output:
   html_document:
     toc: no
 ---
 
-## Preliminary schedule
+
+## Schedule
+
+STATS 631 is new this year, so suggestions on how to make it work well are particularly appreciated.
+In addition to all the activities of 531, we will arrange a one-hour meeting at a time we call all make, at which we will discuss a paper.
+Everyone is expected to have something to say, for example, a fairly brief reading of the paper should be sufficient to have an opinion on one or more of the "generic questions" listed below.
+You are expected to spend at least an hour reading the paper.
+The primary intention here is that we learn about research in time series analysis by discussing some strong papers (old and new) which have helped to define the current state of the art. 
 
 1. Week starting Jan 13: [__akaike74__](https://doi.org/10.1109/TAC.1974.1100705)
 <br>
-AIC is recommended by influential recent time series papers, including those later on our reading list (hyndman08,taylor18).Hirotugu Akaike developed his ideas in a sequence of papers, but this is the first one which focuses on the current standard definition of AIC. Akaike's foundational papers are 50 years old, and there has been much work on model selection since then. Why have  Akaike's ideas been so persistent?  
+Hirotugu Akaike's information criterion (AIC) is used in many recent time series papers, including those later on our reading list.
+Akaike developed his ideas in a sequence of papers, with time series analysis being one of his main motivations.
+This paper is the first one which focuses on the current standard definition of AIC.
+Akaike's foundational papers are 50 years old, and there has been much work on model selection since then.
+Why have  Akaike's ideas been so persistent?  
 
 1. Week starting Jan 20: [__box76__](https://doi.org/10.1080/01621459.1976.10480949)
 <br>
-George Box's work popularized the ARIMA framework for time series. Among many other notable contributions, he is responsible what is perhaps the most widely quoted advice for applied statistics, "All models are wrong, but some models are useful.'' This influential discussion of the relationship between science and statistics, and the role of models in this relationship, is informed by Box's extensive work in time series analysis. Look for places where dependence, including temporal dependence, play a role.
+George Box's work popularized the autoregressive integrated moving average (ARIMA) framework for time series.
+Among many other notable contributions, he is responsible what is perhaps the most widely quoted advice for applied statistics, "All models are wrong, but some models are useful."
+This influential discussion of the relationship between science and statistics, and the role of models in this relationship, is informed by Box's extensive work in time series analysis.
+Look for places where dependence, including temporal dependence, play a role.
 
 1. Week starting Jan 27: [__hyndman08__](https://doi.org/10.18637/jss.v027.i03)
 <br>
-Rob Hyndman's many contributions to time series analysis include the development of `auto.arima`, a widely used approach for choosing ARIMA models. Here, we dig into the construction of this procedure and its motivation.
+Rob Hyndman's many contributions to time series analysis include the development of `auto.arima`, a widely used approach for choosing ARIMA models.
+This paper explains the construction of this procedure and its motivation, as well as mentioning alternative approaches. 
 
 1. Week starting Feb 3: [__taylor18__](https://doi.org/10.1080/00031305.2017.1380080)
 <br>
-This paper introduces a widely used modern forecasting tool, [Facebook Prophet](https://cran.r-project.org/web/packages/prophet/index.html): Facebook Prophet (https://cran.r-project.org/web/packages/prophet/index.html). Facebook Prophet is not based on ARIMA modeling, and the difference between these approaches is worth consideration.
+This paper introduces a widely used modern forecasting tool, Facebook Prophet, implemented by the R package [__prophet__](https://cran.r-project.org/web/packages/prophet/index.html).
+Facebook Prophet is not based on ARIMA modeling, and the difference between these approaches is worth consideration.
 
 1. Week starting Feb 10: [__lim21__](https://doi.org/10.1098/rsta.2020.0209)
 <br>
-Deep learning has been influential throughout statistics, and time series analysis is no exception. This review discusses the deep learning for time series, situated before the widespread popularization of transformers.
+Deep learning has been influential throughout statistics, and time series analysis is no exception.
+This review discusses the deep learning for time series, situated before the widespread popularization of transformers.
 
 1. Week starting Feb 17: [__gruver24__](https://proceedings.neurips.cc/paper_files/paper/2023/file/3eb7ca52e8207697361b2c0fb3926511-Paper-Conference.pdf)
 <br>
@@ -34,7 +51,8 @@ When is GenAI useful for time series analysis?
 
 1. Week starting Feb 24: [__bjornstad01__](https://doi.org/10.1126/science.1062226)
 <br>
-There are surprisingly many important ideas about time series analysis for nonlinear stochastic dynamic systems discussed in this compact paper. The issues it raises have prompted much work over the past two decades, and some issues remain unresolved.
+There are surprisingly many important ideas about time series analysis for nonlinear stochastic dynamic systems discussed in this compact paper.
+The issues it raises have prompted much work over the past two decades, and some issues remain unresolved.
 
 Spring Break
 
@@ -44,11 +62,14 @@ Particle filtering facilitates time series analysis for many nonlinear systems. 
 
 1. Week starting Mar 17: [__kristensen16__](https://doi.org/10.18637/jss.v070.i05)
 <br>
-Perhaps the main alternative to likelihood-based inference for POMP models is the locally Gaussian approximation used in the integrated nested Laplace approximation method. A popular implemention is Template Model Builder. 
+Perhaps the main alternative to likelihood-based inference for partially observed Markov process (POMP) models is the locally Gaussian approximation used in the integrated nested Laplace approximation method.
+A popular implemention is Template Model Builder, described in this paper.
 
 1. Week starting Mar 24: [__stock21__](https://doi.org/10.1016/j.fishres.2021.105967)
 <br>
-Fishery management is a major economic and environmental task that is based on POMP models for time series data. Template Model Builder is widely used in this context.
+Fishery management is a major economic and environmental task that is based on POMP models for time series data.
+Template Model Builder is widely used in this context.
+Would there be an advantage to using particle filter methods to avoid the approximations inherent in Template Model Builder, or does this class of problems expose the limitations of the particle filter?
 
 1. Week starting Mar 31: [__wheeler24__](https://doi.org/10.1371/journal.pcbi.1012032)
 <br>
@@ -106,25 +127,27 @@ Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., & Ionides, E. L. (2
 
 ## Generic questions
 
+1. Which parts of the paper might be worthwhile for me to read in more detail, and why? If you see an immediate benefit to obtaining a better understanding of part of the paper, then you may spend extra time on it to the extent that fits into your schedule. 
+
+1. What is the strongest part of the paper? i.e., something that the paper demonstrates which deserves to be widely known.
+
 1. What is the weakest part of the paper? Is there a limitation that may make the paper less useful in practice, or even misleading. (This may be rare, or hard to find, in high-impact papers.)
 
-2. What is the strongest part of the paper? i.e., something that the paper demonstrates which deserves to be widely known.
+1. Has the paper had an impact on statistical theory and/or methodology and/or applications? Why or why not?
 
-3. Has the paper had an impact on statistical theory and/or methodology and/or applications? Why or why not?
+1. Technical questions include: (a) why was the notation set up this way? (b) what steps need additional explanation to be clear to this reader?
 
-4. Technical questions
-    (a) Why was the notation set up this way?
-    (b) What steps need additional explanation to be clear to this reader?
-
-5. Study the figures and tables. To what extent do they support the conclusions of the paper?
+1. Study the numerical results, figures and tables. To what extent do they support the conclusions of the paper?
     
-## Meeting format
+## Grading policy
 
-* Grading is on attendance, participation in a weekly 1-hour discussion, and at least minimal preparation.
+* Grading is on attendance and participation in a weekly 1-hour discussion.
 
-* Minimal preparation means spending one hour reading the paper and thinking about its contribution. This is a useful academic skill---we read many more papers superficially than we can read in detail.
+* Minimal preparation for participation means spending one hour reading the paper and thinking about its contribution. This is a useful academic skill---we read many more papers superficially than we can read in detail.
 
-* All the papers we read are worth many hours of study, and you are welcome to spend as long as you like if you want to get deeper understanding.
+* 631 students will also complete the same assignments as 531 students. The 631 meeting will count for 20% of the grade, and other components of 531 will be scaled accordingly.
+
+
 
 
 
