--- a/02/discussion.Rmd
+++ b/02/discussion.Rmd
@@ -13,7 +13,7 @@ output:
 
 -----------
 
-On slide 19 of Chapter 2, I asserted that the point estimates produced by `lm()` are "good" but the usual ordinary least squares (OLS) standard errors and associated tests are "junk". The justification was that the estimator is unbiased regardless of the correlation structure, but its variance depends on a particular assumption about the correlation (i.e., independence) that is inconsistent with the sample ACF. However, this is not quite enough to dismiss the OLS standard error estimates. It could be that in this particular situation the standard errors are not sensitive to the model violation, in which case the OLS standard errors might be a useful approximation. Alternatively, the OLS standard errors might be substantially wrong. How could you investigate that, given your current level of understanding of statistical methods? Imagine the issue arose in a statistical consulting situation where you are supposed to give an immediate suggestion of how to proceed.
+In Chapter 2, we found that the point estimates produced by `lm()` are reasonable despite the violation of the usual model  ordinary least squares (OLS) model assumptions, but the OLS standard errors and associated tests are unreliable. The justification was that the OLS estimator is unbiased regardless of the correlation structure, but its variance depends on a particular assumption about the correlation (i.e., independence) that is inconsistent with the sample ACF. However, this is not quite enough to dismiss the OLS standard error estimates. It could be that in this particular situation the standard errors are not sensitive to the model violation, in which case the OLS standard errors might be a useful approximation. Alternatively, the OLS standard errors might be substantially wrong. How could you investigate that, given your current level of understanding of statistical methods? Imagine the issue arose in a statistical consulting situation where you are supposed to give an immediate suggestion of how to proceed.
 
 ---------------
 
