--- a/631.md
+++ b/631.md
@@ -15,6 +15,8 @@ Everyone is expected to have something to say, for example, a fairly brief readi
 You are expected to spend at least an hour reading the paper.
 The primary intention here is that we learn about research in time series analysis by discussing some strong papers (old and new) which have helped to define the current state of the art. 
 
+Meetings are Thursday 10:30-11:30 in 438 West Hall.
+
 1. Week starting Jan 13: [__akaike74__](https://doi.org/10.1109/TAC.1974.1100705)
 <br>
 Hirotugu Akaike's information criterion (AIC) is used in many recent time series papers, including those later on our reading list.
