--- a/cal/cal.Rnw
+++ b/cal/cal.Rnw
@@ -25,7 +25,7 @@ entries <- rbind(
   c(format.Date(class_date[3],format="%a %b %d"),
     "Class 3. Chapter 3. White noise and basic time series models"),
   c(format.Date(class_date[3]+4,format="%a %b %d"),
-    "Homework 1 (needs chapter 2), Participation 1, due 11:59pm"),    
+    "Homework 1 (needs chapter 2), due 11:59pm"),    
   c(format.Date(class_including_canceled[canceled[1]],format="%a %b %d"),
     "MLK"),
   c(format.Date(class_date[4],format="%a %b %d"),
@@ -33,7 +33,7 @@ entries <- rbind(
   c(format.Date(class_date[5],format="%a %b %d"),
     "Class 5. Chapter 4 continued. Start chapter 5."),
   c(format.Date(class_date[6]-1,format="%a %b %d"),
-    "Homework 2 (needs chapter 3; chapter 4 to slide 15). Participation 2, due 11:59pm"), 
+    "Homework 2 (needs chapter 3; chapter 4 to slide 15). Participation 1, due 11:59pm"), 
   c(format.Date(class_date[6],format="%a %b %d"),
     "Class 6. Chapter 5. Parameter estimation for ARMA"),
   c(format.Date(class_date[7],format="%a %b %d"),
@@ -41,15 +41,15 @@ entries <- rbind(
   c(format.Date(class_date[8],format="%a %b %d"),
     "Class 8. Chapter 6. Seasonality and trend. Start Chapter 7"),
   c(format.Date(class_date[8]+4,format="%a %b %d"),
-    "Homework 3 (needs chapters 5 and 6), Participation 3, due 11:59pm"),    
+    "Homework 3 (needs chapters 5 and 6), due 11:59pm"),    
   c(format.Date(class_date[9],format="%a %b %d"),
     "Class 9. Chapter 7. Introduction to the frequency domain"),
   c(format.Date(class_date[10],format="%a %b %d"),
     "Class 10. Chapter 8. Smoothing in the time and frequency domain"),
   c(format.Date(class_date[10]+4,format="%a %b %d"),
-    "Homework 4 (needs chapter 7), Participation 4, due 11:59pm"),    
+    "Homework 4 (needs chapter 7), Participation 2, due 11:59pm"),    
   c(format.Date(class_date[11],format="%a %b %d"),
-    "Class 11. Chapter 8, continued"),
+    "Class 11. Quiz 1. Chapter 8, continued"),
   c(format.Date(class_date[12],format="%a %b %d"),
     "Class 12. Chapter 9. Health economics case study"),
 #  c(format.Date(class_date[13],format="%a %b %d"),
@@ -71,13 +71,13 @@ entries <- rbind(
   c(format.Date(class_date[16],format="%a %b %d"),
     "Class 16. Chapter 12. Simulation of stochastic models"),
   c(format.Date(class_date[16]+4,format="%a %b %d"),
-    "Homework 5 (needs chapter 10), Participation 5, due 11:59pm"),    
+    "Homework 5 (needs chapter 10), due 11:59pm"),    
   c(format.Date(class_date[17],format="%a %b %d"),
     "Class 17. Chapter 13. The particle filter"),
   c(format.Date(class_date[18],format="%a %b %d"),
     "Class 18. Chapter 13 continued"),
   c(format.Date(class_date[18]+4,format="%a %b %d"),
-    "Homework 6 (using pomp, needs chapter 11), Participation 6, due 11:59pm"),    
+    "Homework 6 (using pomp, needs chapter 11), Participation 3, due 11:59pm"),    
   c(format.Date(class_date[19],format="%a %b %d"),
     "Class 19. Chapter 14. Parameter estimation by iterated filtering"),
   c(format.Date(class_date[20],format="%a %b %d"),
@@ -85,7 +85,7 @@ entries <- rbind(
   c(format.Date(class_date[21],format="%a %b %d"),
     "Class 21. Chapter 15. Polio case study"),
   c(format.Date(class_date[21]+1,format="%a %b %d"),
-    "Homework 7 (iterated filtering, needs chapter 14), Participation 7, due 11:59pm"),    
+    "Homework 7 (iterated filtering, needs chapter 14), due 11:59pm"),    
   c(format.Date(class_date[22],format="%a %b %d"),
     "Class 22. Chapter 15 continued"),
   c(format.Date(class_date[23],format="%a %b %d"),
@@ -95,9 +95,9 @@ entries <- rbind(
   c(format.Date(class_date[25],format="%a %b %d"),
      "Class 25. Chapter 17. Measles modeling and inference"),
     c(format.Date(class_date[26]-1,format="%a %b %d"),
-    "Homework 8 (POMP inference questions, needs chapter 15), Participation 8, due 11:59pm"),    
+    "Homework 8 (POMP inference questions, needs chapter 15), Participation 4, due 11:59pm"),    
  c(format.Date(class_date[26],format="%a %b %d"),
-    "Class 26. Chapter 17 continued. Starting Chapter 18."),
+    "Class 26. Quiz 2. Chapter 17 continued. Starting Chapter 18."),
   c(format.Date(class_date[27],format="%a %b %d"),
     "Class 27. Chapter 18. Ebola, forecasting and diagnostics"),
    c(format.Date(class_date[27]+1,format="%a %b %d"),
