updated ch3 discussions

--- a/03/discussion.Rmd
+++ b/03/discussion.Rmd
@@ -16,9 +16,13 @@ output:
 **Q3.1. Burn-in.** On slide 18 of Chapter 3, we discovered that `arima.sim()` initializes using a burn-in strategy that throws away the first 13 simulated time points. Finding out where this number 13 comes from, and whether it would change for a different model, is an exercise in checking the source code. By looking at `?arima.sim` can you tell how the burn-in lag is chosen? Perhaps using some of the ideas of Chapter 4 you can intuitively explain why this might be a reasonable choice.
 
 
-**Q3.2. Models for white noise without independence.** The plots on slides 29 and 31 of Chapter 3 demonstrate that stock market returns are examples of quantities that are uncorrelated but not independent. More exactly, we showed that an appropriate model for stock market returns should have these properties. Independent and identically distributed models are relatively easy to write down, since you can just specify a marginal density for one variable, a common example being the normal density. Can you write down a mean zero, constant variance time series model (i.e., a collection of random variables) which is uncorrelated but not independent? If you can think of many choices, you can ask which may be most appropriate for these data.
+**Q3.2. Models for white noise without independence.** The plots on slides 29 and 31 of Chapter 3 demonstrate that stock market returns provide an example of data that are appropriately modeled as uncorrelated but not independent. Independent and identically distributed models are relatively easy to write down, since you can just specify a marginal density for one variable, a common example being the normal density. Can you write down a mean zero, constant variance time series model (i.e., a collection of random variables) which is uncorrelated but not independent? If you can think of many choices, you can ask which may be most appropriate for these data.
 
+**Q3.3. Revisiting the 1/22 class feedback quiz problem.** The [class question](https://ionides.github.io/531w25/03/q3-2.pdf) was designed to have several plausible answers. I showed the question to one of my collaborators and was glad that he picked D, as I intended. However, I sympathize with some other answers. I've reworded D aiming to make it clearer.  Since the data were generated from a stationary model, the time plot should not be strong evidence against stationarity, ruling out A. B and E acknowledge the variation in sample variance but do not provide useful ways to assess whtther this variable sample variance comes about via a stationary stochastic conditional variance model or via a non-stationary model.
 
+C and D contain a value judgement, "looks appropriate," which is hard to quantify but is (in this case) correct! "Randomly changing variance" is an informal description of a model with stochastic conditional variance. The sample variance estimates the variance conditional on the realization of the conditional variance. The actual variance is an expectation over possible values of the conditional variance. So, between C and D, only D can be correct.
+
+If you want to continue discussing this question online, you are welcome.
 
 ---------------
 
