--- a/quiz/Q3-01/sol.Rmd
+++ b/quiz/Q3-01/sol.Rmd
@@ -1,7 +1,8 @@
 
 \color{blue}
 
-**Solution**. E. Adding one parameter in a nested model cannot decrease the maximized log-likelihood, so it can increase the AIC by at most 2 units.
+**Solution**. E.\
+Adding one parameter in a nested model cannot decrease the maximized log-likelihood, so it can increase the AIC by at most 2 units.
 Adjacent pairs $\{(p,q),(p',q')\}$ inconsistent with this are
 $\{(3,2),(3,3)\}$,
 $\{(2,3),(3,3)\}$,
