--- a/quiz/Q3-02/q.Rmd
+++ b/quiz/Q3-02/q.Rmd
@@ -1,7 +1,7 @@
 
 The R function `arima()` provides standard errors calculated using observed Fisher information. This question tests your understanding of what that means. Suppose a parametric model has a single parameter, $\theta$, and the log-likelihood function when fitting this model to dataset is as follows:
 
-```{r fisher_info, fig.width=6,fig.height=4,echo=FALSE}
+```{r fisher_info, fig.width=6,fig.height=4,echo=FALSE,out.width="3.5in"}
 theta <- seq(from=0,to=10,length=200)
 loglik <- -2000-(theta-5)^2
 plot(theta,loglik,ty="l")
@@ -9,11 +9,11 @@ plot(theta,loglik,ty="l")
 
 What is the observed Fisher information ($I_{\mathrm obs}$) for $\theta$?
 
-It may be helpful to note that the observed Fisher information is accumulated over the whole dataset, not calculated per observation, so we don't have to know the number of observations, $N$.
+Hint 1. The observed Fisher information is accumulated over the whole dataset, not calculated per observation, so we don't have to know the number of observations, $N$.
 
-Also, for time series models, we do not usually model observations as independent. Thus, the log-likelihood is not the sum of the log-likelihood for each observation. Its calculation will involve consideration of the dependence, and usually the job of calculating the log-likelihood is left to a computer.
+Hint 2. Observations in time series models are usually not independent. Thus, the log-likelihood is not the sum of the log-likelihood for each observation. Its calculation will involve consideration of the dependence, and usually the job of calculating the log-likelihood is left to a computer.
 
-For checking your answer, it may help to know that the usual variance estimate for the maximum likelihood estimate, $\hat\theta$, is $\var(\hat\theta) \approx 1/I_{\mathrm obs}$.
+Hint 3. The usual variance estimate for the maximum likelihood estimate, $\hat\theta$, is $\var(\hat\theta) \approx 1/I_{\mathrm obs}$.
 
 A: $I_{\mathrm obs}=2$
 
