--- a/quiz/Q3-04/sol.Rmd
+++ b/quiz/Q3-04/sol.Rmd
@@ -1,8 +1,7 @@
 
 \color{blue}
 
-**Solution**. E.
-
+**Solution**. E.\
 The AIC for each model $k\in\{0,1\}$ is $AIC_k = -2\ell_k + 2_{D_k}$, where $\ell_k$ is the log-likelihood for $M_k$ and $D_k$ is the number of parameters. Thus,
 $AIC_0-AIC_1 = 2(\ell_1-\ell_0) - 2 = 0.5$, and so $ 2(\ell_1-\ell_0)=2.5$.
 Under $M_0$, according to Wilks' approximation,
