--- a/quiz/Q6-02/q.Rmd
+++ b/quiz/Q6-02/q.Rmd
@@ -1,6 +1,6 @@
-Four people in a team collaborate on a project.  After the project is submitted, a reader identifies that part of the project is adapted from an unreferenced source, i.e., plagiarized. The team worked using git and cooperates on tracking down the issue, and the commit history clearly reveals who wrote the problematic part of the project. What is the most appropriate course of action:
+Four people in a team collaborate on a project.  After the project is submitted, a reader identifies that part of the project is adapted from an unreferenced source, i.e., it has been plagiarized. The team worked using git and cooperates on tracking down the issue, and the commit history clearly reveals who wrote the problematic part of the project. What is the most appropriate course of action:
 
-A. The guilty coauthor should be penalized heavily for poor scholarship, and the  the other coauthors should have a minor penalty for failing to check their colleague's work.
+A. The guilty coauthor should be penalized heavily for poor scholarship, and the other coauthors should have a minor penalty for failing to check their colleague's work.
 
 B. All coauthors should share the same penalty, since this is a team project and all coauthors share equal responsibility for the submitted report.
 
