--- a/quiz/quiz1.Rmd
+++ b/quiz/quiz1.Rmd
@@ -17,7 +17,7 @@ SOL <- TRUE
 #SOL <- FALSE
 QLABELS <- TRUE
 EXAM <- FALSE
-EXAM <- TRUE
+#EXAM <- TRUE
 if(EXAM){
   ALL <- FALSE
   SOL <- FALSE
@@ -27,7 +27,8 @@ if(EXAM){
 
 \newcommand\exam[1]{#1}
 <!-- \renewcommand\exam[1]{} to remove exam formatting -->
-
+\renewcommand\exam[1]{}
+ 
 ```{r setup,echo=FALSE,cache=FALSE}
 # library(mat2tex)
 library(png)
