--- a/quiz/Q2-01/sol.Rmd
+++ b/quiz/Q2-01/sol.Rmd
@@ -9,9 +9,13 @@ $$\begin{array}{rcl}
   \sum_{j=1}^{n+k} \phi^{n+k-j}\epsilon_j
 \right)
 \\
-&=& \sum_{i=1}^n \sum_{j=1}^{n+k} \cov(\epsilon_i,\epsilon_j)
+&=& \sum_{i=1}^n \sum_{j=1}^{n+k} \phi^{2n+k-(i+j)} \cov(\epsilon_i,\epsilon_j)
 \\
-&=& \sum_{i=1}^n \sigma^2 \phi^{k+2(n-i)} = \phi^k \frac{\sigma^2(1-\sigma)^{2n}}{1-\sigma^2}
+&=& \sigma^2 \phi^k \sum_{i=1}^n  \phi^{2(n-i)}
+\\
+&=& \sigma^2 \phi^k  \sum_{i=0}^{n-1}  \phi^{2i}
+\\
+&=& \sigma^2 \phi^k(1-\phi^{2n}) \big/ (1-\phi^2)
 \end{array}$$
 If you didn't see this, you may feel you were tricked. However, it is a common mistake in practical data analysis to pay insufficient attention to initial conditions, so it is worth bringing this to your attention. 
 
