--- a/bib531.bib
+++ b/bib531.bib
@@ -51,6 +51,15 @@ edition = "First"
   year = {1997},
 }
 
+@article{hyndman08,
+  title={Automatic time series forecasting: The forecast package for {R}},
+  author={Hyndman, Rob J and Khandakar, Yeasmin},
+  journal={Journal of Statistical Software},
+  volume={27},
+  pages={1--22},
+  year={2008}
+}
+
 @article{ionides13-aoas, 
 author = {Ionides, E. L. and Wang, Z. and Tapia Granados, J. A.},
 year = 2013, 
@@ -178,6 +187,17 @@ pages = {280-287},
 year = {2014}, 
 xdoi = {10.1093/aje/kwu128}, 
 journal = {American Journal of Epidemiology} 
+}
+
+@article{taylor18,
+  title={Forecasting at scale},
+  author={Taylor, Sean J and Letham, Benjamin},
+  journal={The American Statistician},
+  volume={72},
+  number={1},
+  pages={37--45},
+  year={2018},
+  publisher={Taylor \& Francis}
 }
 
 @article{venables21,
