--- a/bib531.bib
+++ b/bib531.bib
@@ -124,6 +124,17 @@ pages = {1362--1385}
     Pages = {1032--1044}
 }
 
+@article{makridakis20,
+  title={The {M}4 Competition: 100,000 time series and 61 forecasting methods},
+  author={Makridakis, Spyros and Spiliotis, Evangelos and Assimakopoulos, Vassilios},
+  journal={International Journal of Forecasting},
+  volume={36},
+  number={1},
+  pages={54--74},
+  year={2020},
+  publisher={Elsevier}
+}
+
 @misc{nasa17,
   title={The Sunspot Cycle},
   year={2017},
